Add stacktrace and info flags to Gradle build

--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -34,7 +34,7 @@ jobs:
           ${{ runner.os }}-gradle-
     
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --stacktrace --info
     
     - name: Run unit tests
       run: ./gradlew test
